web socket impl

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
             }
         }
     },
-    "defaultProject": "online-astro-ui"
+    "defaultProject": "online-astro-ui",
+    "cli": {
+      "analytics": false
+    }
 }
