--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@auth0/angular-jwt": "^2.1.0",
+    "@stomp/stompjs": "^7.0.0",
     "@sweetalert2/ngx-sweetalert2": "^5.1.0",
     "@types/googlemaps": "^3.39.11",
     "@types/leaflet": "^1.5.17",
@@ -40,6 +41,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "net": "^1.0.2",
     "ng-animate": "^0.3.4",
     "ng2-charts": "^2.3.2",
     "ng2-file-upload": "^1.4.0",
@@ -55,6 +57,7 @@
     "quill": "^1.3.6",
     "rxjs": "^6.6.2",
     "short-uuid": "^3.1.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^8.19.0",
     "tslib": "^1.13.0",
     "uuid": "^3.4.0",
@@ -68,11 +71,11 @@
     "@angular/language-service": "~8.2.14",
     "@babel/compat-data": "^7.8.0",
     "@babel/preset-env": "^7.8.0",
-    "babel-loader": "^8.1.0",
     "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
+    "babel-loader": "^8.1.0",
     "codelyzer": "~4.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
